# seva-project

./: .gitignore  demo.py  pyproject.toml
configs/: dataset.yaml  train.yaml
eval/: seva_compute_metrics.py  seva_render_batch.py
scripts/: render_compare.py  train.py
seva/: eval.py
seva/modules/: autoencoder.py
tools/: build_dl3dv_parsed_seva_fixed.py  fix_reconfusion_intrinsics.py  regenerate_seva_splits_kmeans.py
train/: __init__.py  train.py  train.py.orig  train.py.rej
train/configs/: dataset.yaml  train.yaml
train/data/: clip_dataset.py  data_parse.py
train/testing/: test_clip_dataset.py  test_conditioning.py  test_diffusion_loss.py  test_integration.py  test_model_factory.py  test_scene.py  test_temp.py
train/training/: __init__.py  conditioning.py  diffusion_loss.py  diffusion_loss.py.orig  diffusion_loss.py.rej  epipolar_loss.py  model_factory.py  validate.py  validate.py.orig  validate.py.rej
train/utils/: checkpointing.py  logging_utils.py
